--- a/src/components/common/Discover/index.astro
+++ b/src/components/common/Discover/index.astro
@@ -26,22 +26,27 @@ const instagramPosts = locale === 'es'
   : enCommon.home.socialmedia.instagramPosts;
 ---
 
-<div class="box-border flex flex-col gap-12 items-left justify-start container mx-auto  py-0 relative w-full bg-white">
-  <h2 class="font-heading leading-none not-italic text-black text-4xl md:text-4xl tracking-tight text-left">
+
+<div class="box-border flex flex-col gap-6 sm:gap-8 md:gap-10 lg:gap-12 items-start justify-start w-full max-w-[100vw] mx-auto py-4 sm:py-5 md:py-6 lg:py-8 px-3 sm:px-4 md:px-5 lg:px-6 bg-white overflow-x-hidden">
+  <h2 class="font-heading leading-tight not-italic text-black text-2xl sm:text-3xl md:text-4xl lg:text-5xl tracking-tight text-left w-full px-2 sm:px-0 mb-1 sm:mb-4">
     {title}
   </h2>
-  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 md:gap-5 lg:gap-6 w-full px-4">
+ <div class="grid grid-cols-1 min-[150px]:grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-1.5 sm:gap-2 md:gap-2 lg:gap-3 w-full">
     {instagramPosts.map((post: any) => (
-      <div class="w-full aspect-[9/18] overflow-hidden rounded-xl">
+       <div class="w-full aspect-[8/18] min-[336px]:aspect-[8/16] sm:aspect-[7/14] overflow-hidden pb-0 rounded-lg rounded-xl sm:rounded-2xl  relative">
         <iframe
           src={post.embedUrl}
-          class="w-full h-auto min-h-full"
+          class="w-full h-full border-0"
           allowtransparency="true"
           allowfullscreen
           frameborder="0"
           scrolling="no"
+          style="height: 100%; min-height: 320px;"
         ></iframe>
       </div>
     ))}
   </div>
 </div>
+
+
+
