fixes menu mobile -  form - receta español

--- a/src/components/common/DesktopNavbar/index.astro
+++ b/src/components/common/DesktopNavbar/index.astro
@@ -73,17 +73,7 @@ const menuItems = t('menu_items', { namespace: 'common', locale: currentLang }) 
   </div>
 
   <!-- Right Side - Language Switcher and Yummies One -->
-  <div class="flex items-center space-x-5">
-    <!-- Language Switcher -->
-    <LanguageSwitcher
-  activeLocale={currentLang}
-  headerColorConfig={{
-    ...headerColorConfig,
-    // Usa la propiedad correcta para el texto
-    textColor: headerColorConfig.backgroundColor === '#FFFFFF' ? '#0066CC' : 'white',
-    // O tal vez 'fontColor', 'colorText', etc.
-  }}
-/>
+  <LanguageSwitcher activeLocale={currentLang} headerColorConfig={headerColorConfig} />
     <!-- <div class="hidden md:flex">
       <SocialMediaIcons 
         currentLang={currentLang} 
