--- a/src/components/common/MobileMenu/index.astro
+++ b/src/components/common/MobileMenu/index.astro
@@ -92,11 +92,10 @@ const closeMenuLabel = t('menu_labels.close_main_menu', { namespace: 'common', l
     </nav>
 
     <!-- Selector de Idioma Móvil -->
-    <div class="mt-6 mb-6 flex justify-center">
-      <LanguageSwitcher activeLocale={currentLang} headerColorConfig={headerColorConfig} />
-      <br />
-     
-    </div>
+<div class="mt-6 mb-6 flex justify-center">
+  <LanguageSwitcher activeLocale={currentLang} headerColorConfig={{ textColor: 'text-white', backgroundColor: 'bg-transparent', hoverTextColor: 'hover:text-gray-300', hoverBackgroundColor: 'hover:bg-transparent', showMessageCarousel: false }} }}
+  />
+</div>
     <div class="flex justify-center">
       <SocialMediaIcons 
         currentLang={currentLang} 
