fixes menu mobile -  form - receta español 2

--- a/src/components/common/DesktopNavbar/index.astro
+++ b/src/components/common/DesktopNavbar/index.astro
@@ -73,6 +73,8 @@ const menuItems = t('menu_items', { namespace: 'common', locale: currentLang }) 
   </div>
 
   <!-- Right Side - Language Switcher and Yummies One -->
+    <div class="flex items-center space-x-5">
+    <!-- Language Switcher -->
   <LanguageSwitcher activeLocale={currentLang} headerColorConfig={headerColorConfig} />
     <!-- <div class="hidden md:flex">
       <SocialMediaIcons 
